--- a/index.qmd
+++ b/index.qmd
@@ -46,8 +46,8 @@ There are tons of materials available online; below I share compulsory and recom
 |--------|--------------------------------------------------|-----------|
 | Week 1 | Introduction: Basics of R functions              | Aubrey    |
 | Week 1 | Data Structures and Types                        | Aubrey    |
-| Week 2 | Data Wrangling                                   | Aubrey    |
-| Week 3 | Data Visualisation                               | Aubrey    |
+| Week 2 | Data Visualisation                               | Aubrey    |
+| Week 3 | Data Manipulation                                | Aubrey    |
 | Week 4 | Exploratory Data Analysis, summary statistics    | Aubrey    |
 | Week 5 | Communicating and Reporting Data using RMarkdown | Aubrey    |
 | Week 5 | Data Science Toolbox, where to from here?        | Aubrey    |
