--- a/my-profile.qmd
+++ b/my-profile.qmd
@@ -3,5 +3,19 @@ title: "About Me"
 subtitle: "Aubrey Mpungose"
 ---
 
-I am a geographer by training, currently completing my PhD, focusing on the geographies of youth. I work as a lecturer in the School of Education, University of KwaZulu Natal, Pietermaritzburg Campus. My research interests include urban and political geography, political economy, computational social science and quantitative social science. I use data science tools,  computational methods and statistical modelling in my research. I enjoy analysing data in R and Python.
+I am a social scientist and human geographer, currently completing a PhD thesis on geographies of youth in Durban. I lecture in the School of Education, University of KwaZulu Natal, Pietermaritzburg Campus. My research interests in:
+
+- Development (political economy, geographies, Polanyi)
+
+- Social Data Science
+
+- Computational social science
+
+- Youth studies
+
+- Social theory (Foucault ❤️, Agamben, governance, markets)
+
+- Political geography and political participation (protest, elections, behaviour)
+
+I use data science tools,  computational methods and statistical methods in my research. I enjoy programming in R and Python.
 
