Update week 3 materials

--- a/my-profile.qmd
+++ b/my-profile.qmd
@@ -11,6 +11,8 @@ I am a social scientist and human geographer, currently completing a PhD thesis 
 
 - Computational social science
 
+- Neighbourhood contexts (education outcomes, health, deprivation)
+
 - Youth studies
 
 - Social theory (Foucault ❤️, Agamben, governance, markets)
